--- a/Fast_Food.ipynb
+++ b/Fast_Food.ipynb
@@ -105,7 +105,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Monroeville has is the town with the most fast food resturants with dollar a menu"
+    "Monroeville and Rosstown are the towns with the most fast food resturants with dollar a menu. Despite this Downtown is the best city for this metric because it is much easier to get around with out a car and is smaller, meaning the resturants are more concentrated together."
    ]
   },
   {
