--- a/Homeless.ipynb
+++ b/Homeless.ipynb
@@ -58,6 +58,13 @@
     "print(\"Zipcode with the highest number of homeless services:\", most_services, highest_count)"
    ]
   },
+ {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Down is by far the best town for this metric with 20 different services for the homeless in a close proximity."
+   ]
+  },
   {
    "cell_type": "code",
    "execution_count": null,
