--- a/Homeless.ipynb
+++ b/Homeless.ipynb
@@ -62,7 +62,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Down is by far the best town for this metric with 20 different services for the homeless in a close proximity."
+    "Downtown is by far the best town for this metric with 20 different services for the homeless in a close proximity."
    ]
   },
   {
