--- a/Final_Notebook(1).ipynb
+++ b/Final_Notebook(1).ipynb
@@ -57,7 +57,7 @@
     "5. Downtown has a lot of job opportunities for those searching for work as well.\n",
     "\n",
     "#### Map of Public Wifi Locations ####\n",
-    "![Public Wifi](images/Public_Wifi.png)\n",
+    "![Public Wifi](Public_Wifi.png)\n",
     "\n",
     "\n",
     "#### Map of Homeless Services ####\n",
