--- a/Final_Notebook(1).ipynb
+++ b/Final_Notebook(1).ipynb
@@ -61,7 +61,7 @@
     "\n",
     "\n",
     "#### Map of Homeless Services ####\n",
-    "![Homeless Services](images/Homeless_Services.png)"
+    "![Homeless Services](Homeless_Services.png)"
    ]
   },
   {
@@ -69,7 +69,7 @@
    "metadata": {},
    "source": [
     "#### Map of $1 Menu Fast Food Restaraunts ####\n",
-    "![1 Dolar Menu Locations](images/1_locations.png)"
+    "![1 Dolar Menu Locations]($1_locations.png)"
    ]
   },
   {
